Changes to Exec summary
grammar
approx sign
add comment about research methods that I think you missed from OH

--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -36,19 +36,19 @@ Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod
 \FloatBarrier
 
 ##Data and Assessment{-}
-This a new full assessment for `r spp` which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled allowing separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR`, and forecasted beyond `r LastYR`.
+This a new full assessment for `r spp`, which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled allowing separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR` and forecasted beyond `r LastYR`.
 
-All of the data sources for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit effort time-series. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
+All of the data sources for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit effort time-series. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age, or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
 
-The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl and fixed gear fleet where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the At-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the At-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
+The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the At-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the At-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
 
-The assessment uses landings data and discard-fraction estimates; catch-per-unit-effort and survey indices; length or age composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality and steepness were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
+The assessment uses landings data and discard-fraction estimates; catch-per-unit-effort and survey indices; length- or age-composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality and steepness were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
 
-Although there are many types of data available for `r spp` since the 1980s which were used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
+Although there are many types of data available for `r spp` since the 1980s used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
 A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in US waters, and the effect of climatic variables on recruitment, growth and survival.
 
-A base model was selected which best captures the central tendency for those sources of uncertainty considered in the model.
+A base model was selected that best captures the central tendency for those sources of uncertainty considered in the model.
 
 <!--Map of assessment region: (Figure \ref{fig:assess_region_map}).  
  
@@ -56,7 +56,7 @@ A base model was selected which best captures the central tendency for those sou
 
 
 ##Stock Biomass{-}
-The predicted spawning output from the base model generally showed a slight decline prior to 1966 when fishing by the foreign fleet commenced. A short, but sharp decline occurred between 1966 and 1970, followed by a period of the spawning output stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning output relative to unfished equilibrium spawning output is above the target of 40% of unfished spawning output at `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning output is high.
+The predicted spawning output from the base model generally showed a slight decline prior to 1966 when fishing by the foreign fleet commenced. A short, but sharp decline occurred between 1966 and 1970, followed by a period of the spawning output stabilizing or with a minimal decline until the late 1990s. The stock showed increases in stock size following the year 2000 due to a combination of strong recruitment and low catches. The `r LastYR` estimated spawning output relative to unfished equilibrium spawning output is above the target of 40% of unfished spawning output at `r Depl_mod1` ($\sim$ 95% asymptotic interval: $\pm$ `r Depl_mod1_CI`). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning output is high.
 
 <!--BEGIN  EXECUTIVE SUMMARY SPAWNING BIOMASS AND DEPLETE TABLES AND FIGURES-->
 ```{r, results='asis'}
@@ -119,10 +119,10 @@ The spawning output of `r spp` reached a low in `r low.ssb`.  Landings for `r sp
 
 \FloatBarrier
 
-![Estimated spawning potential ratio (1-SPR)/(1-SPR50%) for the base model. One minus SPR is plotted so that higher exploitation rates occur on the upper portion of the y-axis. The management target is plotted as a red horizontal line and values above this reflect harvests in excess of the overfishing proxy based on the SPR50% harvest rate. The last year in the time series is `r Dat_end_mod1`. \label{fig:SPR_all}](`r SPR.file`)
+![Estimated spawning potential ratio (1-SPR)/(1-SPR50%) for the base model. One minus SPR is plotted so that higher exploitation rates occur on the upper portion of the y-axis. The management target is plotted as a red horizontal line and values above this reflect harvests in excess of the overfishing proxy based on the SPR50% harvest rate. The last year in the time-series is `r Dat_end_mod1`. \label{fig:SPR_all}](`r SPR.file`)
 
 
-![Phase plot of estimated relative (1-SPR)/(1-SPR50%) vs. relative spawning output (depletion) for the base case model.\label{fig:Phase_all}](`r Phase.file`)
+![Phase plot of estimated (1-SPR)/(1-SPR50%) vs. relative spawning output (depletion) for the base case model.\label{fig:Phase_all}](`r Phase.file`)
 
 \FloatBarrier
 
@@ -131,14 +131,14 @@ The spawning output of `r spp` reached a low in `r low.ssb`.  Landings for `r sp
 
 Rockfish are an important component of the California Current ecosystem along the US west coast, with more than sixty five species filling various niches in both soft and hard bottom habitats from the nearshore to the continental slope, as well as near bottom and pelagic zones. `r spp` are generally considered to be semi-demersal, but there can, at times be a significant pelagic component to their distribution.
 
-Recruitment is one mechanism by which the ecosystem may directly impact the population dynamics of `r spp`. The 1999 cohort for many species of rockfish was large - sometimes significantly so. Long-term averages suggesting that environmental conditions may influence the spawning success and survival of larvae and juvenile rockfish. `r spp` showed above average recruitment deviations in 1999 and 2000. The specific pathways through which environmental conditions exert influence on `r spp` dynamics are unclear; however, changes in water temperature and currents, distribution of prey and predators, and the amount and timing of upwelling are all possible linkages. Changes in the environment may also result in changes in length-at-maturity, fecundity, growth, and survival which can affect the status of the stock and its susceptibility to fishing. Unfortunately, there are few data available for `r spp` that provide insights into these effects.
+Recruitment is one mechanism by which the ecosystem may directly impact the population dynamics of `r spp`. The 1999 cohort for many species of rockfish was large -- sometimes significantly so. Long-term averages suggest that environmental conditions may influence the spawning success and survival of larvae and juvenile rockfish. `r spp` showed above average recruitment deviations in 1999 and 2000. The specific pathways through which environmental conditions exert influence on `r spp` dynamics are unclear; however, changes in water temperature and currents, distribution of prey and predators, and the amount and timing of upwelling are all possible linkages. Changes in the environment may also result in changes in length-at-maturity, fecundity, growth, and survival which can affect the status of the stock and its susceptibility to fishing. Unfortunately, there are few data available for `r spp` that provide insights into these effects.
 
-Fishing has effects on both the age-structure of a population, as well as the habitat with which the target species is associated. Fishing often targets larger, older fish, and years of fishing mortality results in a truncated age-structure when compared to unfished conditions. Rockfish are often associated with habitats containing living structure such as sponges and corals, and fishing may alter that habitat to a less desirable state. This assessment provides a look at the effects of fishing on age structure, and recent studies on essential fish habitat are beginning to characterize important locations for rockfish throughout their life history; however there is little current information available to evaluate the specific effects of fishing on the ecosystem issues specific to `r spp`.
+Fishing has effects on both the age-structure of a population, as well as the habitat with which the target species is associated. Fishing often targets larger, older fish and years of fishing mortality results in a truncated age-structure when compared to unfished conditions. Rockfish are often associated with habitats containing living structure such as sponges and corals, and fishing may alter that habitat to a less desirable state. This assessment provides a look at the effects of fishing on age structure, and recent studies on essential fish habitat are beginning to characterize important locations for rockfish throughout their life history; however, there is little current information available to evaluate the specific effects of fishing on the ecosystem issues specific to `r spp`.
 
 
 ##Reference Points{-}
 
-This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the management target. Due to reduced landing and the large 2008 year-class, an increasing trend in spawning output was estimated in the base model. The estimated depletion in `r LastYR` is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` (~95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, with an equilibrium catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt. Estimated MSY catch is at a `r Ref_pts_mod1[20,2]` spawning output of `r paste(Ref_pts_mod1[17,2], fecund_unit,sep=' ')` (`r paste0(round(100 * as.numeric(Ref_pts_mod1[17,2])/as.numeric(Ref_pts_mod1[1,2]),1), "%")` depletion)
+This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the management target. Due to reduced landing and the large 2008 year-class, an increasing trend in spawning output was estimated in the base model. The estimated depletion in `r LastYR` is `r Depl_mod1` ($\sim$ 95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` ($\sim$ 95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, with an equilibrium catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt. Estimated MSY catch is at a `r Ref_pts_mod1[20,2]` spawning output of `r paste(Ref_pts_mod1[17,2], fecund_unit,sep=' ')` (`r paste0(round(100 * as.numeric(Ref_pts_mod1[17,2])/as.numeric(Ref_pts_mod1[1,2]),1), "%")` depletion)
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY REFERENCE POINT TABLES************* -->
@@ -205,18 +205,19 @@ TBD after STAR panel
 
 ##Research and Data Needs{-} 
 
-There are many areas of research that could be improved to benefit the understanding and assessment of `r spp`. Below, are issues that are considered of the importance.
+There are many areas of research that could be improved to benefit the understanding and assessment of `r spp`. Below, are issues that are considered of importance.
 
 \begin{enumerate}
 
-\item \textbf{Natural mortality}: Uncertainty in natural mortality translates into uncertain estimates of status and sustainable fishing levels for `r spp`. The collection of additional age data, re-reading of older age samples, reading old age samples that are unread, and improved understanding of the life-history of `r spp` may reduce that uncertainty.
+\item \textbf{Natural mortality}: Uncertainty in natural mortality translates into uncertain estimates of status and sustainable fishing levels for `r spp`. The collection of additional age data, re-reading of older age samples, reading old age samples that are unread, and improved understanding of the life history of `r spp` may reduce that uncertainty.
 
-\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understating regarding the steepness of US west coast `r spp` will reduce our uncertainty regarding current stock status.
+\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understating regarding the steepness parameter for US west coast `r spp` will reduce our uncertainty regarding current stock status.
 
 \item \textbf{Basin-wide understanding of stock structure, biology, connectivity, and distribution:} This is a stock assessment for `r spp` off of the west coast of the US and does not consider data from British Columbia or Alaska. Further investigating and comparing the data and predictions from British Columbia and Alaska to determine if there are similarities with the US west coast observations would help to define the connectivity between `r spp` north and south of the US-Canada border.
- 
 
 \end{enumerate}
+
+<!-- Owen noted this additional point \item \textbf{Scale:} The scale of the population is extremely uncertain, and the replication of the 1979/1985 `r spp` survey, which appears to have adequately sampled the population, could help inform issues of scale. -->
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY RESULTS SUMMARY TABLE --> 
