--- a/Presentation/POP_2017_STAR_Model_Results.Rnw
+++ b/Presentation/POP_2017_STAR_Model_Results.Rnw
@@ -114,7 +114,7 @@ University of Washington$^2$ \\
   \begin{table}[ht]
   \small
   \centering
-  \begin{tabular}{p{1.5in}p{0.65in}p{0.5in}p{0.75in}}
+  \begin{tabular}{p{1.5in}p{0.6in}p{0.6in}p{0.6in}}
   Parameter & Females & Males & Estimated  \\ 
   \hline
   Natural mortality  & 0.054 & 0.054 & N \\
@@ -123,8 +123,8 @@ University of Washington$^2$ \\
   Growth coefficient ($k$) & 0.167 & 0.199 & Y \\
   SD young & 1.35 & 1.35 & Y-females \\
   SD old   & 2.56 & 2.28 & Y \\
-  Weight-at-length (alpha) & 1.044E-5 & 1.05E-5 & N \\
-  Weight-at-length (beta)  & 3.088 & 3.083 & N \\
+  Weight-at-length (alpha) & 1.04E-5 (1.03E-5)& 1.05E-5 (9.88E-6)& N \\
+  Weight-at-length (beta)  & 3.09 (3.10) & 3.08 (3.10)& N \\
   \hline
   \end{tabular}
   \end{table}
