At-sea hake to at-sea hake in exec summary

--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -25,7 +25,7 @@ Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY CATCH FIGURES AND TABLES*********** -->
 <!-- ***********CATCH FIGURES********************************************** -->
-```{r, fig.cap= paste('Landings of' ,spp, 'for California, Oregon, Washington, the foriegn fishery (1966-1976), At-sea hake fishery, and fishery-independent surveys. \\label{fig:Exec_catch1}',sep=' ')}
+```{r, fig.cap= paste('Landings of' ,spp, 'for California, Oregon, Washington, the foriegn fishery (1966-1976), at-sea hake fishery, and fishery-independent surveys. \\label{fig:Exec_catch1}',sep=' ')}
     # CSV: './txt_files/Exec_catch_for_figs.csv'
     # Note: you cannot have carriage returns in the R options line
     # Plot washington catches           
@@ -40,7 +40,7 @@ This a new full assessment for `r spp`, which was last assessed in 2011.  In thi
 
 All of the data sources for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit effort time-series. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age, or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
 
-The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the At-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the At-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
+The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the at-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the at-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
 
 The assessment uses landings data and discard-fraction estimates; catch-per-unit-effort and survey indices; length- or age-composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality and steepness were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
 
